--- a/TestFramework/packages.config
+++ b/TestFramework/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Selenium.Support" version="3.6.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.6.0" targetFramework="net452" />
+  <package id="WebDriver.GeckoDriver" version="0.19.0" targetFramework="net452" />
 </packages>
